# bevy_file_atlas_pls

./: '  Cargo.toml  README.md  out.txt
assets/: player.animations.ron
examples/: moving_skeleton.rs
src/: animation_altlas.rs  animation_collection.rs  animation_comp.rs  animation_ended.rs  animation_error.rs  animation_frames.rs  animation_key.rs  animation_precent_progress.rs  animation_respo_resource.rs  animation_time_factor.rs  bool_animation_plugin.rs  lib.rs  listen_animation_end.rs  main.rs  pos_scale_factor.rs  precent.rs  prelude.rs  save_load.rs  sprite_animation_bundle.rs  static_text_repos.rs  systems.rs  text_like.rs  types.rs  utils.rs
src/bool_animation_plugin/: bevy_inspector.rs
src/systems/: asset_handling.rs
