[package]
name = "assets"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["BoolPurist"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_common_assets = { version = "0.7.0", features = ["ron"] }
serde = { version = "1.0.188", features = ["derive"] }
# Enable a small amount of optimization in debug mode

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
